# tobiko-cloud-demo

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  blueprint_demo.sql  config.yaml  external_models.yaml  pyproject.toml  redshift_state.db  requirements.txt  schema.yaml  table_diff_model.py  table_diff_script.py  tcloud.yaml
.astro/: config.yaml
.github/workflows/: daily_elt_job.yml  sqlmesh.yml  tcloud_cicd.yml
audits/: assert_positive_order_ids.sql
dags/: local.py  tcloud_dag.py
dagster-quickstart/data/: processed_data.csv  sample_data.csv
dagster-quickstart/quickstart/: definitions.py
dagster-quickstart/tmpm1lvbx3m/history/: runs.db
dagster-quickstart/tmpm1lvbx3m/schedules/: schedules.db
demo_scripts/: config.py  force_run_errors.py  load_raw_events.py  main.py  rename_column_util.py
demo_scripts/tests/: test_config.py  test_integration.py  test_load_raw_events.py  test_main.py  test_rename_column_util.py
loader_scripts/: fix_run_errors.py  force_run_errors.py  load_raw_events.py
macros/: date_wap.py  deduplicate.py  dynamic_columns.py  folder_env.py  gen_surrogate_key.py
macros/tests/: test_gen_surrogate_key.py
models/: aggregated_revenue.py  customers.sql  full_example.sql  incremental_events.sql  incremental_events_allow_partials.sql  orders.sql  orders_returned.py  seed_ecommerce.sql  seed_raw_customers.sql  seed_raw_orders.sql  seed_raw_payments.sql
models/examples/: bigquery_to_duckdb.sql  blueprint_demo.sql  date_spine.sql  deduplicate.sql  dummy_model copy.sql  dummy_model.sql  external_model.sql  full_model.sql  hive_example.sql  incremental_demo.sql  incremental_model.sql  model_1.sql  model_a.sql  model_b.sql  seed_model.sql  snapshot_by_time_model.sql
models/prod/: model_name.sql  ref_model_name.sql
models/staging/: stg_customers.sql  stg_orders.sql  stg_orders_copy.sql  stg_payments.sql
my-dagster-project/: README.md  pyproject.toml  setup.cfg  setup.py
my-dagster-project/my_dagster_project/: definitions.py
raw_data/: create_raw_product_usage.sql  create_raw_sales.sql  raw_product_usage.csv  raw_sales.csv
repo_b/: config.yaml  tcloud.yaml
repo_b/models/: model_2.sql
seeds/: ecommerce.csv  seed_data.csv
signals/: elt_sync.py
tcloud_config_templates/: config_bigquery.yaml  config_snowflake.yaml  tcloud.yaml
tests/: test_full_model.yaml  test_stg_orders_copy.yaml
utils/: config.py  dynamic_model.sql  their_config.py  xdb_diff_demo.sh
(+3 files in other folders)
