[tool.poetry]
name = "tobiko_cloud_demo"
version = "0.1.0"
description = ""
authors = []
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
tcloud = "1.1.0"
typer="^0.12.3"
google-auth="2.34.0"
google-cloud-bigquery="3.25.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.4.7"
mypy = "^1.10.0"
pytest = "8.1.1"

[[tool.poetry.source]]
name = "sqlmesh-enterprise"
url = "https://us-west2-python.pkg.dev/tobiko-1/sqlmesh-enterprise/simple/"
priority = "supplemental"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
